--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -1,7 +1,38 @@
-.test1 {
-    color: red;
-    background-color: yellow;
-    h1 {
-        
+@import 'settings';
+
+* {
+  box-sizing: border-box;
+}
+nav {
+  background-color: $nav-red;
+  margin-bottom: 20px;
+  img {
+    margin: 15px 30px 15px 0;
+    float: left;
+  }
+  h1 {
+    margin-top: 25px;
+    font-size: 1.8em;
+    float: right;
+    color: $nav-h1-color;
+  }
+}
+section {
+  p {
+    transition: .3s;
+    font-size: 1.3em;
+  }
+  padding: 15px;
+  .new-class, {
+    font-size: 2em;
+  }
+  input{
+    padding: 3px 10px;
+    &::-webkit-input-placeholder{
+      font-style: italic;
     }
+  }
+  .new-class2 {
+    font-size: 2.5em;
+  }
 }
