Addes some changes, add vars

--- a/src/style/scss/_settings.scss
+++ b/src/style/scss/_settings.scss
@@ -1,2 +1,17 @@
-$nav-red: #FB202B;
-$nav-h1-color: #f0f0f0;
+//  Main page structure colors
+$main-color: #F0431E;
+$main-orange: #F0781E;
+$main-orange-light: #F0AC1E;
+$main-orange-yellow: #F0E11E;
+$main-olive: #CBF01E;
+$main-green: #97F01E;
+
+// Font sizes
+$h1-font-size: 2.5em;
+$h2-font-size: 2em;
+$h3-font-size: 1.8em;
+$h4-font-size: 1.5em;
+$h5-font-size: 1.3em;
+$h6-font-size: 1.1em;
+
+// Font colors
