Added 'Control List' section.

--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -48,8 +48,65 @@ section {
     &::-webkit-input-placeholder{
       font-style: italic;
     }
+    &[type="checkbox"] {
+      box-shadow: none;
+      margin-right: 20px;
+      -webkit-appearance: none;
+      background-color: #fafafa;
+      border: 1px solid #cacaca;
+      padding: 7px;
+      border-radius: 2px;
+      display: inline-block;
+      position: relative;
+      &:focus {
+        outline: none;
+      }
+      &:checked {
+        background-color: inherit;
+        border: 1px solid $main-green;
+      }
+      &:checked:after {
+        content: '\2714';
+        font-size: 20px;
+        position: absolute;
+        top: -7px;
+        left: 0px;
+        color: #111;
+      }
+    }
   }
   .new-class2 {
-    font-size: 2.5em;
+    font-size: $h1-font-size;
   }
-}
+  hr {
+    margin: 30px 0 0;
+  }
+  ul {
+    list-style: none;
+    li {
+      padding: 5px 0;
+    }
+  }
+  .done {
+    position: relative;
+    transition: .5s;
+    &:before {
+      z-index: -1;
+      transition: .5s;
+      content: "";
+      position: absolute;
+      display: block;
+      width: 0%;
+      height: 100%;
+      background-color: $main-green;
+      top: 0;
+      left: 0;
+      animation: widthIncrese .3s forwards;
+    }
+    @keyframes widthIncrese {
+      100% {
+        width: 100%;
+      }
+    }
+  }
+  }
