--- a/src/style/scss/style.scss
+++ b/src/style/scss/style.scss
@@ -76,6 +76,9 @@ section {
       }
     }
   }
+  .search {
+    margin-bottom: 20px;
+  }
   .new-class2 {
     font-size: $h1-font-size;
   }
@@ -84,6 +87,7 @@ section {
   }
   ul {
     list-style: none;
+    padding-left: 10px;
     li {
       padding: 5px 0;
     }
